assets/css/style.css
:root {
    --main-font: 
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

header {
    padding: 40px;
    background: black;
}

header h1 {
    text-align: center;
    letter-spacing: 3px;
    color: white;
}

nav ul {
    display: flex;
    justify-content: space-around;
}

ul {
    padding-inline-start: 0;
}

li {
    display: flex;
    margin-top: 15px;
}

nav {
    margin-top: 20px;
}

nav a {
    text-decoration: none;
    color: white;
    letter-spacing: 4px;
    border-bottom: 1px solid white;
    padding-bottom: 2px;
}

body {
    background: white;
}

.box{
    text-align: center;
}

.img-box{
    text-align: center;
}

.about-content img {
    width: 300px;
    height: 350px;
    margin-top: 10px;
}

.about-content {
    width: 100%;
    text-align: justify;
}

.about-content p {
    padding: 10px 60px 10px 60px;
}

.about-me, .work, .contact {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.about-me h2, .work h2, .contact h2 {
    font-size: 35px;
}

.content {
    display: flex;
    width: 100%;
    text-align: justify;
}

.content p, .content ul {
    padding: 10px 60px 10px 60px;
}

.contact ul {
    text-align: center;
    display: flex;
    justify-content: center;
}

.contact li {
    margin-left: 20px;
}

.phone-number, .email {
    margin-right: 5px;
}


@media screen and (min-width: 768px) {

    header h1 {
        font-size: 45px;
        margin: 0 20px;
    }

    .nav-bar {
        margin: 0 40px;
    }

    li {
        display: inline-block;
    }

    nav ul {
        justify-content: center;
    }

    nav a {
        text-decoration: none;
        color: white;
        letter-spacing: 4px;
        border-bottom: 1px solid white;
        padding-bottom: 2px;
    }

    .about-me h2, .work h2, .contact h2 {
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-end; 
        width: 20%;
        padding-right: 2%;
        font-size: 35px;
        margin-left: 2px;
    }

    .about-content p {
        padding: 10px 60px 10px 20px;
    }

    .about-content {
        width: 60%;
        text-align: left;
        border-left: 2px solid black;
    }

    .content {
        width: 60%;
        text-align: left;
        border-left: 2px solid black;
    }
    
    .content p, .content ul {
        padding: 0 20px 20px 20px;
    }

   
    
    .box {
        display: flex;
        margin-top: 20px;
    }

    .contact li {
        margin-left: 20px;
    }

    .contact-content {
        border-left: 2px solid black;
    }

}

